Fix for automated accessibility checkers - button appeared to checkers not to have enough contrast when it actually did

--- a/assets/css/css.styl
+++ b/assets/css/css.styl
@@ -226,6 +226,7 @@ nav, aside, .attention
 .button
   display block
   width 10rem
+  background-color #f80
   background linear-gradient(to bottom, #fe0 0%, #fc0 15%, #f90 65%, #e40 100%)
   padding 1rem
   margin 1rem auto
